upload all files

--- a/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
@@ -28,7 +28,7 @@
   <meta property="og:title" id="ogTitle" content="Black Nickel Plating & BLACK NICKEL SALT">
   <meta property="og:description" id="ogDesc" content="สเปกและวิธีใช้งานนิกเกิลดำ พร้อมผลิตภัณฑ์ BLACK NICKEL SALT และตัวอย่างการผสม.">
   <meta property="og:url" id="ogURL" content="https://www.baumechemical.com/products/platingcoating/blacknickel/">
-  <meta property="og:image" content="https://i.imgur.com/j7SpCDD.jpeg">
+  <meta property="og:image" content="https://i.imgur.com/IGRAqiw.jpeg">
   <meta property="og:image:alt" content="Black nickel plated parts - dark glossy finish">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" id="twTitle" content="Black Nickel Plating & BLACK NICKEL SALT">
@@ -57,7 +57,7 @@
     "@type":"Product",
     "name":"BLACK NICKEL SALT",
     "description":"เกลือนิเกิ้ลดำสำหรับผสมน้ำยาชุบนิกเกิลดำ ให้ผิวดำเงาสม่ำเสมอ เหมาะกับงานกล้อง แว่นตา อิเล็กทรอนิกส์ จิวเวลรี่ และงานโลหะตกแต่ง.",
-    "image":"https://i.imgur.com/j7SpCDD.jpeg",
+    "image":"https://i.imgur.com/IGRAqiw.jpeg",
     "brand":{"@type":"Brand","name":"Baume Chemical"},
     "category":"Black Nickel Plating",
     "inLanguage":"th",
@@ -69,7 +69,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://i.imgur.com/j7SpCDD.jpeg">
+  <link rel="preload" as="image" href="https://i.imgur.com/IGRAqiw.jpeg">
 
   <style>
     :root{
@@ -145,7 +145,7 @@
     /* ===== Hero ===== */
     .hero{position:relative;overflow:hidden;display:grid;place-items:center;text-align:center;color:#fff;
       min-height: clamp(420px, 62svh, 680px);
-      background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)), url('https://i.imgur.com/j7SpCDD.jpeg') center/cover no-repeat;
+      background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)), url('https://i.imgur.com/IGRAqiw.jpeg') center/cover no-repeat;
       padding:22px 16px}
     .hero-inner{position:relative;z-index:1}
     .hero h1{margin:0 0 10px;font-weight:800;font-size:clamp(28px,4.4vw,48px);text-shadow:0 6px 28px rgba(0,0,0,.45)}
