--- a/products/platingcoating/nickelplating/troubleshootingennickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingennickel/index.html
@@ -28,7 +28,7 @@
   <meta property="og:title" id="ogTitle" content="EN Nickel (Electroless Nickel) • NI-508">
   <meta property="og:description" id="ogDesc" content="กลไก EN Nickel, จุดเด่น, การใช้งาน, และสเปก NI-508: สูตรผสม/เงื่อนไข/ปรับเติม/กรอง/ความปลอดภัย">
   <meta property="og:url" id="ogURL" content="https://www.baumechemical.com/products/platingcoating/ennickel/">
-  <meta property="og:image" content="https://i.imgur.com/j7SpCDD.jpeg">
+  <meta property="og:image" content="https://i.imgur.com/gQDiFMo.jpeg">
   <meta property="og:image:alt" content="Electroless Nickel bath and plated parts">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" id="twTitle" content="EN Nickel (Electroless Nickel) • NI-508">
@@ -52,7 +52,7 @@
   <script type="application/ld+json">{
     "@context":"https://schema.org/","@type":"Product",
     "name":"EN Nickel NI-508 (Mid-P)","description":"กระบวนการชุบนิกเกิลไม่ใช้ไฟฟ้าความเสถียรสูง ฟอสฟอรัส >7% เงางาม แข็ง ทนสึก ทนกัดกร่อน เหมาะทั้ง Rack/Barrel.",
-    "image":"https://i.imgur.com/j7SpCDD.jpeg",
+    "image":"https://i.imgur.com/gQDiFMo.jpeg",
     "brand":{"@type":"Brand","name":"Baume Chemical"},
     "category":"Electroless Nickel (Mid-P)","inLanguage":"th",
     "offers":{"@type":"Offer","url":"https://www.baumechemical.com/products/platingcoating/ennickel/","priceCurrency":"THB","price":"0.00","availability":"https://schema.org/InStock"}
@@ -62,7 +62,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://i.imgur.com/j7SpCDD.jpeg">
+  <link rel="preload" as="image" href="https://i.imgur.com/gQDiFMo.jpeg">
 
   <style>
     :root{
@@ -139,7 +139,7 @@
     /* Hero */
     .hero{position:relative;overflow:hidden;display:grid;place-items:center;text-align:center;color:#fff;
       min-height: clamp(420px, 62svh, 680px);
-      background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)), url('https://i.imgur.com/j7SpCDD.jpeg') center/cover no-repeat;
+      background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)), url('https://i.imgur.com/gQDiFMo.jpeg') center/cover no-repeat;
       padding:22px 16px}
     .hero-inner{position:relative;z-index:1}
     .hero h1{margin:0 0 10px;font-weight:800;font-size:clamp(28px,4.4vw,48px);text-shadow:0 6px 28px rgba(0,0,0,.45)}
