--- a/products/platingcoating/nickelplating/troubleshootingnickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingnickel/index.html
@@ -28,7 +28,7 @@
   <meta property="og:title" id="ogTitle" content="Bright Nickel Plating • A-Brite">
   <meta property="og:description" id="ogDesc" content="สรุปกระบวนการชุบนิกเกิลเงาและข้อมูล A-Brite: คุณสมบัติ อัตราผสม และการปรับเติม">
   <meta property="og:url" id="ogURL" content="https://www.baumechemical.com/products/platingcoating/nickel/bright/">
-  <meta property="og:image" content="https://i.imgur.com/j7SpCDD.jpeg">
+  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-3.jpg">
   <meta property="og:image:alt" content="Bright nickel finish on decorative parts">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" id="twTitle" content="Bright Nickel Plating • A-Brite">
@@ -53,7 +53,7 @@
     "@context":"https://schema.org/","@type":"Product",
     "name":"A-Brite • Bright Nickel Additive",
     "description":"ยาเงานิเกิ้ลสำหรับงานถังกลิ้งและถังแขวน ให้เงาสูง ครอบคลุมซอกมุมดี รองรับชุบโครเมียมบนผิวนิเกิ้ล",
-    "image":"https://i.imgur.com/j7SpCDD.jpeg",
+    "image":"https://img5.pic.in.th/file/secure-sv1/thumbnail-3.jpg",
     "brand":{"@type":"Brand","name":"Baume Chemical"},
     "category":"Bright Nickel",
     "inLanguage":"th",
@@ -65,7 +65,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://i.imgur.com/j7SpCDD.jpeg">
+  <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/thumbnail-3.jpg">
 
   <style>
     :root{
@@ -146,7 +146,7 @@
     /* Hero */
     .hero{position:relative;overflow:hidden;display:grid;place-items:center;text-align:center;color:#fff;
       min-height: clamp(420px, 62svh, 680px);
-      background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)), url('https://i.imgur.com/j7SpCDD.jpeg') center/cover no-repeat;
+      background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)), url('https://img5.pic.in.th/file/secure-sv1/thumbnail-3.jpg') center/cover no-repeat;
       padding:22px 16px}
     .hero-inner{position:relative;z-index:1}
     .hero h1{margin:0 0 10px;font-weight:800;font-size:clamp(28px,4.4vw,48px);text-shadow:0 6px 28px rgba(0,0,0,.45)}
