upload all files

--- a/products/platingcoating/nickelplating/troubleshootingennickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingennickel/index.html
@@ -297,7 +297,7 @@ body.no-scroll{ position:fixed; width:100% }
   <header class="hero" aria-label="EN Nickel Hero">
     <!-- Back button -->
     <div class="back-wrap">
-      <a href="/products/platingcoating/" class="btn back" id="backBtn">
+      <a href="https://www.baumechemical.com/products/platingcoating/nickelplating/index.html" class="btn back" id="backBtn">
         <svg viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M15 18l-6-6 6-6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
         <span data-i18n-key="btn_back">ย้อนกลับ</span>
       </a>
