--- a/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
@@ -154,6 +154,10 @@
     .bullet{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border:1px solid rgba(255,255,255,.5);border-radius:999px;background:rgba(255,255,255,.12);font-weight:600;color:#eaf4f2;backdrop-filter: blur(6px)}
     .bullet .icon{display:grid;place-items:center;width:22px;height:22px;border-radius:999px;background:#fff;color:#0f172a;font-weight:800;font-size:12px}
 
+    .back-wrap{ top: calc(var(--header-h) + 16px); z-index: 3; }
+.hero{ position: relative; z-index: 1; } /* ให้ปุ่มลอยบนภาพฮีโร่แน่ ๆ */
+
+
     /* ===== Layout / Cards / Tables ===== */
     .wrap{max-width:var(--container);margin:auto;padding:34px 16px}
     h2.section{margin:0 0 8px;font-size:clamp(22px,2.6vw,30px);font-weight:800;color:#1f2a24}
