--- a/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
@@ -136,7 +136,7 @@
     body.no-scroll{position:fixed;width:100%}
 
     /* ===== Back button (glass chip over hero) ===== */
-    .back-wrap{ top: calc(var(--header-h) + 16px); z-index: 3;display:flex;align-items:center;gap:8px}
+    .back-wrap{position:absolute; left:16px; top:calc(var(--header-h) + 12px); z-index:2; display:flex; align-items:center; gap:8px}
     .btn{appearance:none;border:1px solid var(--brand);background:var(--accent);color:#1b2637;padding:10px 14px;border-radius:12px;font-weight:800;text-decoration:none}
     .btn.back{display:inline-flex;align-items:center;gap:8px;background:#ffffff22;border:1px solid rgba(255,255,255,.55);color:#fff;padding:8px 12px;border-radius:12px;font-weight:800;text-decoration:none;backdrop-filter: blur(6px)}
     .btn.back:hover{background:#ffffff33}
@@ -147,8 +147,7 @@
       min-height: clamp(420px, 62svh, 680px);
       background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)), url('https://i.imgur.com/IGRAqiw.jpeg') center/cover no-repeat;
       padding:22px 16px}
-    .hero-inner{position:relative;z-index:2}
-    .hero{ position: relative; z-index:1; } /* ให้ปุ่มลอยบนภาพฮีโร่แน่ ๆ */
+    .hero-inner{position:relative; z-index:1}
     .hero h1{margin:0 0 10px;font-weight:800;font-size:clamp(28px,4.4vw,48px);text-shadow:0 6px 28px rgba(0,0,0,.45)}
     .hero p{max-width:980px;margin:0 auto 14px;color:#e6f2ef}
     .bullets{display:flex;gap:10px;justify-content:center;flex-wrap:wrap;margin-top:12px}
