--- a/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
@@ -247,6 +247,23 @@ body.no-scroll{ position:fixed; width:100% }
 .menu .lang-li .lang-btn{ color:#fff }
 .menu .lang-li .lang-btn[aria-pressed="true"]{ background:#fff; color:#0f172a }
 
+/* ให้ฮีโร่เป็นฐานวางเลเยอร์ */
+.hero{ position:relative; z-index:0 }
+
+/* ปุ่ม Back ให้อยู่สูงกว่า header */
+.back-wrap{
+  position:fixed;              /* ลอยเหนือฮีโร่ ปลอดภัยจากการโดนบัง */
+  left:16px;
+  top:calc(var(--header-h) + 12px);
+  z-index:2001;                /* > 1400 ของ header */
+  pointer-events:auto;
+}
+/* header ต่ำกว่าเล็กน้อย */
+.site-header{ z-index:2000 }
+
+/* กันกรณี scrim เผลอโผล่มาบัง */
+.menu-scrim[hidden]{ display:none !important; pointer-events:none !important }
+
   </style>
 </head>
 <body>
@@ -451,12 +468,25 @@ body.no-scroll{ position:fixed; width:100% }
 
   <!-- ===== Scripts: header glass, menu, back, i18n (keeps GSC meta safe) ===== -->
   <script>
-    // Sticky header: darken on scroll
-    (function(){
-      const header = document.getElementById('siteHeader');
-      const onScroll = ()=> header && header.classList.toggle('scrolled', (window.scrollY||0) > 10);
-      onScroll(); window.addEventListener('scroll', onScroll, {passive:true});
-    })();
+(function(){
+  const header = document.getElementById('siteHeader');
+  if(!header) return;
+
+  // ใส->เข้มเมื่อเลื่อน
+  const onScroll = ()=> header.classList.toggle('scrolled', (window.scrollY||0) > 10);
+  window.addEventListener('scroll', onScroll, {passive:true}); onScroll();
+
+  // คำนวณความสูง header ไปผูกกับ --header-h ให้ปุ่ม back เลี่ยงได้เสมอ
+  const setH = ()=>{
+    const h = header.getBoundingClientRect().height || 64;
+    document.documentElement.style.setProperty('--header-h', h + 'px');
+  };
+  setH();
+  window.addEventListener('resize', setH, {passive:true});
+  window.addEventListener('load', setH, {once:true});
+  try{ document.fonts && document.fonts.ready.then(setH); }catch(e){}
+  try{ new ResizeObserver(setH).observe(header); }catch(e){}
+})();
 
     // Mobile nav: scrim + body lock
     (function(){
