upload all files

--- a/products/platingcoating/brassplating/troubleshootingbrass/index.html
+++ b/products/platingcoating/brassplating/troubleshootingbrass/index.html
@@ -8,7 +8,7 @@
   <!-- SEO base -->
   <meta name="description" content="Brass Cyanide น้ำยาชุบทองเหลืองไซยาไนด์: ภาพรวม กระบวนการ สัดส่วนผสม พารามิเตอร์เดินบ่อ คุณสมบัติ จุดเด่น 6 ข้อ อุปกรณ์ที่ใช้ แนวทางควบคุม/ความปลอดภัย พร้อม i18n ครบทุกบรรทัด">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
-  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/brass-cyanide/index.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/brassplating/troubleshootingbrass/index.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
@@ -21,8 +21,8 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="คู่มือ Brass Cyanide — น้ำยาชุบทองเหลืองไซยาไนด์">
   <meta property="og:description" content="จุดประสงค์การชุบ องค์ประกอบสารเคมี สูตร Make-up พารามิเตอร์เดินงาน คุณสมบัติ/ความปลอดภัย และไกด์แก้ปัญหา">
-  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/brass-cyanide/index.html">
-  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/brass-cyanide-hero.jpg">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/brassplating/troubleshootingbrass/index.html">
+  <meta property="og:image" content="https://i.imgur.com/ikv1kfr.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
   <script type="application/ld+json">
@@ -35,7 +35,7 @@
   "brand": {"@type": "Brand","name": "Baume Chemical"},
   "category": "Brass Plating",
   "inLanguage": "th",
-  "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/platingcoating/brass-cyanide/index.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
+  "offers": {"@type": "Offer","url": "https://www.baumechemical.com/products/platingcoating/brassplating/troubleshootingbrass/index.html","priceCurrency": "THB","price": "0.00","availability": "https://schema.org/InStock"},
   "aggregateRating": {"@type":"AggregateRating","ratingValue":"5","reviewCount":"10"}
 }
   </script>
@@ -45,7 +45,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://flagcdn.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/brass-cyanide-hero.jpg"/>
+  <link rel="preload" as="image" href="https://i.imgur.com/ikv1kfr.jpeg"/>
 
   <style>
     :root{
@@ -53,7 +53,7 @@
       --radius:14px; --shadow-1:0 8px 26px rgba(2,8,20,.06); --shadow-2:0 16px 40px rgba(2,8,20,.14);
       --logo-url:url('https://img2.pic.in.th/pic/Baume.jpg');
       --header-h:64px; --container:1200px;
-      --hero-url:url('https://img5.pic.in.th/file/secure-sv1/brass-cyanide-hero.jpg');
+      --hero-url:url('https://i.imgur.com/ikv1kfr.jpeg');
     }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0}
